--- a/application.yml
+++ b/application.yml
@@ -8,4 +8,4 @@ errormsg: myErrorMessage-default
 spring:
   profiles: dev
 cfc: mycrcur4444-changed6
-errormsg: myErrorMessage-dev
+errormsg: myErrorMessage-dev-edited-2
