--- a/application.yml
+++ b/application.yml
@@ -2,6 +2,11 @@ spring:
   profiles: default
 cfc: mycrcurldef11
 errormsg: myErrorMessage-default
+
+spring:
+  profiles: default
+cfc: mycrcurldef11
+errormsg: myErrorMessage-default
  
 ---
 
@@ -9,3 +14,22 @@ spring:
   profiles: dev
 cfc: mycrcur4444-changed6
 errormsg: myErrorMessage-dev-edited-2
+
+
+camel:
+  log:
+    msg1: Processing has been started
+    msg2: Processing has been ended
+ 
+---
+
+spring:
+  profiles: dev
+cfc: mycrcur4444-changed6
+errormsg: myErrorMessage-dev-edited-2
+
+
+camel:
+  log:
+    msg1: Processing has been started
+    msg2: Processing has been ended
